--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,47 @@
-name: Conda
-on: [push]
+name: Run CodeCarbon Emissions Tracker
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  # label of the job
-  tests:
-    name: Tests
-    # containers must run in Linux based operating systems
+  track-emissions:
     runs-on: ubuntu-latest
-    # Do not ignore bash profile files. From:
-    # https://github.com/marketplace/actions/setup-miniconda
-    defaults:
-      run:
-        shell: bash -l {0}
-    # Docker Hub image that `postgres-job` executes in
-    container: node:latest
-    # service containers to run with `postgres-job`
+
     steps:
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          miniconda-version: "latest"
-          channels: bioconda, conda-forge, defaults
-          use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
-          auto-update-conda: true
-          auto-activate-base: true
-      - name: Install samtools
-        run: |
-            echo "begin: PATH=$PATH;"
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-            conda create -y --name samtools samtools
+    - name: Set up Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: myenv
+        environment-file: environment.yml
+        auto-activate-base: false
 
-            conda activate samtools || true
-            echo "after conda activate samtools: PATH=$PATH;"
-            which samtools || true
-            # Use samtools here.
+    - name: Install CodeCarbon
+      shell: bash -l {0}
+      run: |
+        pip install codecarbon
+
+    - name: Create wrapper to run main.py with CodeCarbon
+      shell: bash -l {0}
+      run: |
+        echo "from codecarbon import EmissionsTracker" > run_with_emissions.py
+        echo "tracker = EmissionsTracker()" >> run_with_emissions.py
+        echo "tracker.start()" >> run_with_emissions.py
+        echo "exec(open('main.py').read())" >> run_with_emissions.py
+        echo "tracker.stop()" >> run_with_emissions.py
+
+    - name: Run main.py with CodeCarbon tracker
+      shell: bash -l {0}
+      run: |
+        python run_with_emissions.py
+
+    - name: Upload emissions output
+      uses: actions/upload-artifact@v3
+      with:
+        name: codecarbon-emissions
+        path: emissions.csv
