--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Run CodeCarbon Emissions Tracker
 
 on:
   push:
-    branches: [ main ] 
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -38,10 +38,40 @@ jobs:
     - name: Run main.py with CodeCarbon tracker
       shell: bash -l {0}
       run: |
-        python run_with_emissions.py
+        python run_with_emissions.py --output-file emissions.csv
 
     - name: Upload emissions output
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
         name: codecarbon-emissions
         path: emissions.csv
+
+    # —— New steps for automated PR feedback ——
+    - name: Parse emissions and prepare comment
+      id: emissions-summary
+      shell: bash -l {0}
+      run: |
+        pip install pandas
+        python - << 'EOF'
+import pandas as pd, json, sys
+# Read the last row of the CSV
+ df = pd.read_csv("emissions.csv")
+ summary = df.iloc[-1].to_dict()
+ # Build markdown body
+ body = (
+     f"**Carbon Emissions Report**  \n"
+     f"- CO₂ emitted: {summary['emissions_in_kg']:.4f} kg  \n"
+     f"- Energy consumed: {summary['energy_consumed']:.4f} kWh  \n"
+     f"- Timestamp: {summary['timestamp']}"
+ )
+ # Output for use in next action
+ print(f"::set-output name=body::{body}")
+EOF
+
+    - name: Comment emissions on PR
+      if: github.event_name == 'pull_request'
+      uses: peter-evans/create-or-update-comment@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: ${{ steps.emissions-summary.outputs.body }}
