--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,10 @@ jobs:
         summary = df.iloc[-1].to_dict()
         # Build markdown body
         body = (
-            f"**Carbon Emissions Report**  \n"
-            f"- CO₂ emitted: {summary['emissions']:.4f} kg  \n"
-            f"- Energy consumed: {summary['energy_consumed']:.4f} kWh  \n"
-            f"- Country: {summary['country_iso_code']}"
+            f"**Carbon Emissions Report**\n
+            - CO₂ emitted: {summary['emissions']:.4f} kg\n
+            - Energy consumed: {summary['energy_consumed']:.4f} kWh\n
+            - Country: {summary['country_iso_code']}"
         )
         # Output for use in next action
         print(f"::set-output name=body::{body}")
