--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,23 +52,25 @@ jobs:
 
     # —— New steps for automated PR feedback ——
     - name: Parse emissions and prepare comment
-      id: emissions-summary
-      shell: bash -l {0}
-      run: |
-        pip install pandas
-        python - << 'EOF'
-        import pandas as pd, json, sys
-        # Read the last row of the CSV
-        df = pd.read_csv("emissions.csv")
-        summary = df.iloc[-1].to_dict()
-        # Build markdown body
-        body = f"""**Carbon Emissions Report**test\n
-            - CO₂ emitted: {summary['emissions']:.4f} kg\n
-            - Energy consumed: {summary['energy_consumed']:.4f} kWh\n
-            - Country: {summary['country_iso_code']}"""
-        # Output for use in next action
-        print(f"::set-output name=body::{body}")
-        EOF
+  id: emissions-summary
+  shell: bash -l {0}
+  run: |
+    pip install pandas
+    python - << 'EOF' > comment.txt
+    import pandas as pd
+    df = pd.read_csv("emissions.csv")
+    summary = df.iloc[-1].to_dict()
+    body = f"""**Carbon Emissions Report**
+
+    - CO₂ emitted: {summary['emissions']:.4f} kg  
+    - Energy consumed: {summary['energy_consumed']:.4f} kWh  
+    - Country: {summary['country_iso_code']}"""
+    with open("comment.txt", "w") as f:
+        f.write(body)
+    EOF
+    echo "body<<EOF" >> $GITHUB_OUTPUT
+    cat comment.txt >> $GITHUB_OUTPUT
+    echo "EOF" >> $GITHUB_OUTPUT
 
     - name: Comment emissions on PR
       if: github.event_name == 'pull_request'
