--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,20 +62,13 @@ jobs:
         df = pd.read_csv("emissions.csv")
         summary = df.iloc[-1].to_dict()
         # Build markdown body
-        body = (
-            f"**Carbon Emissions Report**\n"
-            f"- CO₂ emitted: {summary['emissions']:.4f} kg\n"
-            f"- Energy consumed: {summary['energy_consumed']:.4f} kWh\n"
-            f"- Country: {summary['country_iso_code']}"
-        )
-        with open("comment.txt", "w") as f:
-            f.write(body)
+        body = f"""**Carbon Emissions Report**\\n
+            - CO₂ emitted: {summary['emissions']:.4f} kg\\n
+            - Energy consumed: {summary['energy_consumed']:.4f} kWh\\n
+            - Country: {summary['country_iso_code']}"""
+        # Output for use in next action
+        print(f"::set-output name=body::{body}")
         EOF
-        {
-          echo "body<<EOF"
-          cat comment.txt
-          echo "EOF"
-        } >> "$GITHUB_OUTPUT"
 
     - name: Comment emissions on PR
       if: github.event_name == 'pull_request'
