--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,18 +57,19 @@ jobs:
       run: |
         pip install pandas
         python - << 'EOF'
-        import pandas as pd, json, sys
-        # Read the last row of the CSV
+        import pandas as pd
         df = pd.read_csv("emissions.csv")
-        summary = df.iloc[-1].to_dict()
-        # Build markdown body
-        body = f"""**Carbon Emissions Report**\\n
-            - CO₂ emitted: {summary['emissions']:.4f} kg\\n
-            - Energy consumed: {summary['energy_consumed']:.4f} kWh\\n
-            - Country: {summary['country_iso_code']}"""
-        # Output for use in next action
-        print(f"::set-output name=body::{body}")
+        s = df.iloc[-1]
+        print(f"CO₂ emitted: {s.emissions:.4f} kg")
+        print(f"Energy consumed: {s.energy_consumed:.4f} kWh")
+        print(f"Country: {s.country_iso_code}")
         EOF
+
+    - name: Set multiline output
+      run: |
+        echo "body<<EOF" >> $GITHUB_OUTPUT
+        echo "${{ steps.emissions-summary.outputs.stdout }}" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
 
     - name: Comment emissions on PR
       if: github.event_name == 'pull_request'
@@ -76,4 +77,4 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         issue-number: ${{ github.event.pull_request.number }}
-        body: ${{ steps.emissions-summary.outputs.body }}
+        body: ${{ steps.set-multiline-output.outputs.body }}
