--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
   track-emissions:
     runs-on: ubuntu-latest
 
+    env:
+      NUM_EPISODES: 100
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
