--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,27 +93,27 @@ jobs:
         body-path: emissions.md
 
   # UPDATE GRAPH
-  update-trend-graph:
-    if: github.event_name == 'push'
-    runs-on: ubuntu-latest
-    needs: execute-and-comment
-
-    steps:
-      - name: Checkout main
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # whole history
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install plotting deps
-        run: pip install pandas matplotlib
-
-      - name: Fetch last emissions artifact (first-time safe)
-        uses: actions/download-artifact@v4
-        with:
-          name: codecarbon-emissions
-          path: .
+  #update-trend-graph:
+  #  if: github.event_name == 'push'
+  #  runs-on: ubuntu-latest
+  #  needs: execute-and-comment
+#
+  #  steps:
+  #    - name: Checkout main
+  #      uses: actions/checkout@v3
+  #      with:
+  #        fetch-depth: 0 # whole history
+#
+  #    - name: Set up Python
+  #      uses: actions/setup-python@v4
+  #      with:
+  #        python-version: '3.x'
+#
+  #    - name: Install plotting deps
+  #      run: pip install pandas matplotlib
+#
+  #    - name: Fetch last emissions artifact (first-time safe)
+  #      uses: actions/download-artifact@v4
+  #      with:
+  #        name: codecarbon-emissions
+  #        path: .
