--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,27 +123,80 @@ jobs:
         body-path: emissions.md
 
   # UPDATE GRAPH
-  #update-trend-graph:
-  #  if: github.event_name == 'push'
-  #  runs-on: ubuntu-latest
-  #  needs: execute-and-comment
-#
-  #  steps:
-  #    - name: Checkout main
-  #      uses: actions/checkout@v3
-  #      with:
-  #        fetch-depth: 0 # whole history
-#
-  #    - name: Set up Python
-  #      uses: actions/setup-python@v4
-  #      with:
-  #        python-version: '3.x'
-#
-  #    - name: Install plotting deps
-  #      run: pip install pandas matplotlib
-#
-  #    - name: Fetch last emissions artifact (first-time safe)
-  #      uses: actions/download-artifact@v4
-  #      with:
-  #        name: codecarbon-emissions
-  #        path: .
+  graph:
+    needs: execute
+    if: github.event_name == 'push'
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+
+    - name: Install plotting deps
+      run: pip install pandas matplotlib
+
+    # import emmisions.csv as artifact
+    - name: Download the emissions artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: emissions
+        path: .
+
+    # TODO
+    - name: Initialize history CSV if missing
+      run: |
+        if [ ! -f emissions_history.csv ]; then
+          echo "date,emissions_kg,energy_kwh" > emissions_history.csv
+        fi
+
+    - name: Append latest run to history
+      run: |
+        python - << 'EOF'
+        import pandas as pd
+        from datetime import datetime
+
+        # load new emission
+        new = pd.read_csv("emissions.csv").iloc[-1]
+        row = {
+          "date": datetime.utcnow().strftime("%Y-%m-%d"),
+          "emissions_kg": new.emissions_in_kg,
+          "energy_kwh": new.energy_consumed
+        }
+        pd.DataFrame([row]).to_csv("emissions_history.csv", mode="a", header=False, index=False)
+        EOF
+
+    - name: Generate trend plot
+      run: |
+        python - << 'EOF'
+        import pandas as pd, matplotlib.pyplot as plt
+
+        hist = pd.read_csv("emissions_history.csv", parse_dates=["date"])
+        plt.plot(hist.date, hist.emissions_kg)
+        plt.xlabel("Date")
+        plt.ylabel("CO₂ emissions (kg)")
+        plt.tight_layout()
+        plt.savefig("emissions_trend.png")
+        EOF
+
+            - name: Embed graph into README
+              run: |
+                sed -i '/<!-- EMISSIONS_GRAPH -->/,/<!-- END_EMISSIONS_GRAPH -->/c\
+        <!-- EMISSIONS_GRAPH -->\
+        ![Emissions Over Time](emissions_trend.png)\
+        <!-- END_EMISSIONS_GRAPH -->' README.md
+
+    - name: Commit & push graph update
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add emissions_history.csv emissions_trend.png README.md
+        git commit -m "chore: update emissions trend graph [ci skip]" || echo "No changes to commit"
+        git push
