--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,6 +186,18 @@ jobs:
         plt.savefig("emissions_trend.png")
         EOF
 
+    - name: Ensure README exists
+    run: |
+        # Create README.md with markers if missing
+    if [ ! -f README.md ]; then
+      cat << 'EOF' > README.md
+      ## Carbon Emissions Over Time
+
+      <!-- EMISSIONS_GRAPH -->
+      <!-- END_EMISSIONS_GRAPH -->
+      EOF
+    fi
+
     - name: Embed graph into README
       run: |
         sed -i '/<!-- EMISSIONS_GRAPH -->/,/<!-- END_EMISSIONS_GRAPH -->/c\
