--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,7 @@ permissions:
 jobs:
   # EXECUTE
   execute:
-    if: >
-      github.ref == 'refs/heads/main' &&
-      github.actor != 'github-actions[bot]'
+    if: github.actor != 'github-actions[bot]'
 
     runs-on: ubuntu-latest
 
@@ -229,6 +227,7 @@ jobs:
         git add emissions_history.csv emissions_trend.png README.md
 
     - name: Create Pull Request for trend update
+      id: create_pr
       uses: peter-evans/create-pull-request@v5
       with:
         base: main
@@ -240,3 +239,10 @@ jobs:
         labels: automated
         draft: false
         signoff: true
+
+    - name: Enable auto-merge
+      if: steps.create_pr.outputs.pull-request-number != ''
+      uses: peter-evans/enable-pull-request-automerge@v2
+      with:
+        pull-request-number: ${{ steps.create_pr.outputs.pull-request-number }}
+        merge-method: squash
