--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -227,7 +227,6 @@ jobs:
         git add emissions_history.csv emissions_trend.png README.md
 
     - name: Create Pull Request for trend update
-      id: create_pr
       uses: peter-evans/create-pull-request@v5
       with:
         base: main
@@ -241,8 +240,7 @@ jobs:
         signoff: true
 
     - name: Enable auto-merge
-      if: steps.create_pr.outputs.pull-request-number != ''
+      if: github.actor == 'github-actions[bot]'
       uses: peter-evans/enable-pull-request-automerge@v2
       with:
         pull-request-number: ${{ steps.create_pr.outputs.pull-request-number }}
-        merge-method: squash
