--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,7 +163,7 @@ jobs:
     - name: Initialize history CSV if missing
       run: |
         if [ ! -f emissions_history.csv ]; then
-          echo "date,emissions_kg,energy_kwh" > emissions_history.csv
+          echo "timestamp,emissions_kg,energy_kwh" > emissions_history.csv
         fi
 
     - name: Append latest run to history
@@ -175,7 +175,7 @@ jobs:
         # load new emission
         new = pd.read_csv("emissions.csv").iloc[-1]
         row = {
-          "date": datetime.utcnow().strftime("%Y-%m-%d"),
+          "timestamp": datetime.utcnow().strftime("%Y-%m-%dT%H:%M:%SZ"),
           "emissions_kg": new.emissions,
           "energy_kwh": new.energy_consumed
         }
@@ -187,8 +187,8 @@ jobs:
         python - << 'EOF'
         import pandas as pd, matplotlib.pyplot as plt
 
-        hist = pd.read_csv("emissions_history.csv", parse_dates=["date"])
-        plt.plot(hist.date, hist.emissions_kg)
+        hist = pd.read_csv("emissions_history.csv", parse_dates=["timestamp"])
+        plt.plot(hist.timestamp, hist.emissions_kg)
         plt.xlabel("Date")
         plt.ylabel("CO₂ emissions (kg)")
         plt.tight_layout()
@@ -227,6 +227,7 @@ jobs:
         git add emissions_history.csv emissions_trend.png README.md
 
     - name: Create Pull Request for trend update
+      id: create_pr
       uses: peter-evans/create-pull-request@v5
       with:
         base: main
@@ -240,7 +241,10 @@ jobs:
         signoff: true
 
     - name: Enable auto-merge
-      if: github.actor == 'github-actions[bot]'
+      if: steps.create_pr.outputs.pull-request-number != ''
       uses: peter-evans/enable-pull-request-automerge@v2
       with:
         pull-request-number: ${{ steps.create_pr.outputs.pull-request-number }}
+        repository: ${{ github.repository }}
+        merge-method: squash      # or "merge" / "rebase"
+        github-token: ${{ secrets.GITHUB_TOKEN }}
